<resources>
    <string name="app_name" translatable="false">infogram</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="nom_de_usr">Nombre de Usuario</string>
    <string name="contrase">Contraseña</string>
    <string name="button_text">login</string>
    <string name="tienes_cuenta">"¿No ienes cuenta? "</string>
    <string name="crea_cuenta">Crea una aquí.</string>
    <string name="email_usr">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="confirm_contrase">Confirme contraseña</string>
    <string name="create_acc_button">ÚNETE</string>
    <string name="crear_cuenta_msg">Crear cuenta</string>
    <string name="usr_carlos_cardview">Carlos Vargas</string>
    <string name="hace_cardV">Hace</string>
    <string name="hace_dias_cardV">" 4 días"</string>
    <string name="bottom_buscar_item">buscar</string>
    <string name="home">Home</string>
    <string name="yo_item">Yo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home_fragment">Home</string>
    <string name="megusta_imgdet">" me gusta"</string>
    <string name="cantd_likes">10</string>
    <string name="text_imgdet">Todo copas en la wakaplaya</string>
    <string name="text_content_imgdet">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="textTitle_immdet">Todo copas en la wakaplaya</string>

</resources>