<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CreateAccountActivity">

    <include layout="@layout/appbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/create_acc_margintop"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_create_acc">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--style="@style/TextInputLayoutCustom"-->
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextCuentaBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_usr"
                    android:inputType="textEmailAddress">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/create_acc_margintop">
                <!--style="@style/TextInputLayoutCustom"-->
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextCuentaBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:inputType="text">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/create_acc_margintop">
                <!--style="@style/TextInputLayoutCustom"-->
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextCuentaBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nom_de_usr"
                    android:inputType="text">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/create_acc_margintop">
            <!--style="@style/TextInputLayoutCustom"-->

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextCuentaBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrase"
                    android:inputType="textPassword">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/create_acc_margintop">
                <!--style="@style/TextInputLayoutCustom"-->

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextCuentaBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_contrase"
                    android:inputType="textPassword">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/create_acc_margintop"
                android:text="@string/create_acc_button"
                android:theme="@style/raiseButtonDark">
            </Button>
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>