<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ImageDetailActivity">
    <com.google.android.material.appbar.AppBarLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:id="@+id/appbar_imgdet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_image_dimen"
        style="@style/AppTheme.AppBarOverlay">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_imgdet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/design_default_color_primary">
            <ImageView
                android:id="@+id/image_imgdet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@drawable/en_lp"
                app:layout_collapseMode="parallax">
            </ImageView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_imgdet"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_collapseMode="pin">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/usrname_imgdet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textView_username_imgdet"
                android:text="@string/usr_carlos_cardview"
                android:layout_marginTop="@dimen/marginTop_imdet"
                android:paddingHorizontal="@dimen/padding_card">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_card"
                android:paddingHorizontal="@dimen/padding_card">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/editText_megsta"
                    android:text="@string/cantd_likes">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/editText_megsta"
                    android:layout_marginStart="@dimen/margin_megusta_imgdet"
                    android:text="@string/megusta_imgdet">
                </TextView>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_divider_imgdet"
                android:background="@color/cardview_dark_background">
            </View>
            <TextView
                android:id="@+id/title_imgdet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_title_imgdet"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/textTitle_immdet"
                android:paddingTop="@dimen/paddingTop_title_imgdet">
            </TextView>
            <TextView
                android:id="@+id/content_imgdet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_content_imgdet"
                android:textSize="@dimen/textSize_title_imgdet"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/paddingTop_title_imgdet"
                android:paddingHorizontal="@dimen/paddingTop_title_imgdet"
                >
            </TextView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_imgdet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:src="@drawable/heart"
        app:layout_anchor="@id/image_imgdet"
        app:layout_anchorGravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_imgdet_margin"
        app:backgroundTint="@color/micolor">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.coordinatorlayout.widget.CoordinatorLayout>