<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    app:cardCornerRadius="@dimen/corner_radius_cardview"
    android:layout_margin="@dimen/margin_cardview">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/en_lp"
            android:scaleType="centerCrop"
            >
        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:padding="15dp"
            android:background="@color/background_cardview">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="@string/usr_carlos_cardview">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hace_cardV"
                    android:textSize="14sp"
                    android:textColor="@color/white">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hace_dias_cardV"
                    android:textSize="14sp"
                    android:textColor="@color/white">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:background="@drawable/checkbox_selector"
                    android:scaleY="0.6"
                    android:scaleX="0.6">

                </CheckBox>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10 me gusta"
                    android:textColor="@color/white">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</androidx.cardview.widget.CardView>